fixing article image covering text at certain screen widths

--- a/music/src/pages/style.scss
+++ b/music/src/pages/style.scss
@@ -132,7 +132,6 @@ html, body {
             position: relative;
 
             img {
-                // change here maybeeeeeeeeeeeeeeeeeeee
                 width: 100%;
                 max-height: 100%;
                 position: absolute;
@@ -332,6 +331,12 @@ html, body {
                 }
             }
         }
+    }
+}
+
+@media only screen and (min-width: 465px) and (max-width: 565px) {
+    .page-content article aside img {
+        margin-bottom: -70px;
     }
 }
 
